# spice-team-skills

./: .gitignore  CLAUDE.md  ONBOARDING.md  README.md  UPDATING.md  bump.sh  check-consistency.py  deploy_goop_skill.command
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-push
hooks/: skill-version-check.sh
plugins/spice-design/: README.md
plugins/spice-marketplaces/: README.md
plugins/spice-operations/: README.md
plugins/spice-retention/: README.md
setup/: onboarding-checklist.md
skills/campaign-briefing/: SKILL.md
skills/campaign-ops/: SKILL.md
skills/campaign-plan/: RUN-LOCALLY.md  SETUP-per-GM.md  SKILL.md  run_local.sh
skills/campaign-setup/: SKILL.md
skills/cannibalization-auditor/: SKILL.md  pyproject.toml
skills/cannibalization-auditor/clients/: _template.json
skills/cannibalization-auditor/references/: analysis-framework.md  data-collection-checklist.md  deliverable-template.md  input-csv-schema.md  methodology-plain-english.md
skills/cannibalization-auditor/scripts/: analyze.py  build_unified.py  render_deliverable.py  validate_inputs.py
skills/cannibalization-auditor/tests/: goop_proof.py  smoke_test.py  spend_sanity_test.py
skills/client-call-prep/: SKILL.md
skills/client-diagnostics/: .gitignore  SKILL.md  requirements-dev.txt
skills/client-onboarding/: SKILL.md
skills/context/: SKILL.md
skills/diagnostic-action-plan/: SKILL.md
skills/diagnostic-campaigns/: SKILL.md
skills/diagnostic-ops/: SKILL.md
skills/executive-review/: SKILL.md
skills/ezcater-diagnostic/: SKILL.md
skills/gm/: SKILL.md
(+276 files in other folders)
