[project]
name = "cannibalization-auditor"
version = "0.1.0"
description = "Six-month cannibalization + spend reallocation audit for multi-unit restaurant clients"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
